# Geoguess

./: .gitignore  .gitmodules  CMakeLists.txt  ClickableObject.cpp  Geoguess.cpp  Geoguess.vcxproj  Geoguess.vcxproj.filters  README.md  main.cpp
dependencies/: CMakeLists.txt
source/: CMakeLists.txt  ClickableObject.cpp  ClickableObject.h  Geoguess.cpp
textFiles/: Wojewodztwa.txt  europe.txt
x64/Release/: Geoguess.exe.recipe  Geoguess.iobj  Geoguess.ipdb
x64/Release/Geoguess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Geoguess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
